# LabAssistant

./: .cursorignore  .gitignore  CMakeLists.txt  LICENSE  ZS2_Decoder.cpp  ZS2_Decoder.h  callout.cpp  callout.h  dataloader.cpp  dataloader.h  fix_svg_files.py  haptic_serie.cpp  haptic_serie.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagereceiver.cpp  messagereceiver.h  process_svg_files.py  process_svg_files_advanced.py  process_svg_files_comprehensive.py  process_svg_files_fixed.py  process_svg_files_xmlsafe.py  qcompressor.cpp  qcompressor.h  resources.qrc  setProxy.Ps1  singleapplication_p.cpp  singleapplication_p.h  view.cpp  view.h  view_callouts.cpp  view_event_handlers.cpp  view_old_special_chart_constructors.cpp  view_utilities.cpp  view_utilities.h
.cache/clangd/index/: ZS2_Decoder.cpp.8958C0FA81BCC236.idx  ZS2_Decoder.h.65D612FC4E388C68.idx  binlog.h.32EE5AB99F4BC80A.idx  binlog_objects.h.3E2E24B3A0213B46.idx  blfparser.cpp.65810B292F229CD0.idx  blfparser.h.A3177F1FB56BA007.idx  callout.cpp.40A71844A2E83DD8.idx  callout.h.CE112F6F7DB2CD8C.idx  csvparser.h.F60D60A73D00C8BA.idx  data.hpp.54899FE07330ED09.idx  data_dialog.h.6AFD3E122A74AC97.idx  data_types.h.36BFA5226C8D4E0B.idx  dataloader.h.7B6057951C45D1D6.idx  dbciterator.cpp.2F44D9BB24514E3D.idx  dbciterator.hpp.A139E60B6F8129D6.idx  haptic_serie.h.27D36A6B930D05C6.idx  message.cpp.B8CBF67C5A1BC58A.idx  message.hpp.92086C248D86010E.idx  messagereceiver.cpp.5C89F32BD1D79D3A.idx  messagereceiver.h.FC87B82025E5087B.idx  qcompressor.h.1168A93954FC77DC.idx  signal.cpp.2A721A24A68009B9.idx  signal.hpp.B6F25126673A15C7.idx  singleapplication.cpp.48C04C5746E5162C.idx  singleapplication.h.76B61572249EE5B1.idx  singleapplication_p.h.3E43E745756A31E2.idx  view.h.51F2786C66A9DE4E.idx  view_event_handlers.cpp.5B706558F928746C.idx
Data_Reader/: .cursorignore  CMakeLists.txt  datamanagerresources.qrc
Data_Reader/blf_parser/: binlog.h  binlog_objects.h  blfparser.cpp  blfparser.h
Data_Reader/csv_parser/: csvparser.cpp  csvparser.h
Data_Reader/data/: data.cpp  data.h  data_dialog.cpp  data_dialog.h  data_dialog.ui  data_types.h
Data_Reader/dbc_parser/: dbciterator.cpp  dbciterator.hpp  message.cpp  message.hpp  signal.cpp  signal.hpp
